--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,10 +12,35 @@ pool:
 steps:
 - task: NodeTool@0
   inputs:
-    versionSpec: '10.x'
+    versionSpec: '16.x'
   displayName: 'Install Node.js'
 
 - script: |
     npm install
+  displayName: 'npm install'
+
+- script: |
     npm run build
-  displayName: 'npm install and build'
+  displayName: 'npm build'
+
+- task:    
+- task: CopyFiles@2
+  inputs:
+    SourceFolder: '$(Build.SourcesDirectory)'
+    Contents: '*.tgz'
+    TargetFolder: '$(build.artifactstagingdirectory)/npm'
+  displayName: 'copy npm package'
+
+- task: CopyFiles@2
+  inputs:
+    SourceFolder: '$(Build.SourcesDirectory)'
+    Contents: 'package.json'
+    TargetFolder: '$(build.artifactstagingdirectory)/npm'
+  displayName: 'Copy package.json'
+   
+- task: PublishBuildArtifacts@1
+  inputs:
+    TargetPath: '$(build.artifactstagingdirectory)/npm'
+    ArtifactName: npm
+  displayName: 'Publish npm Artifact'  
+
